added logo and font updates

--- a/HTML/profile_page.html
+++ b/HTML/profile_page.html
@@ -15,7 +15,7 @@
     
     <div class="navbar">
         <div class="logo">
-            <h1>Wanderlist</h1>
+            <img class="logo" rel="shortcut icon" src="../Images-Fonts/Wanderlist.png" />
 
         </div>
         <div class="menu">
