--- a/HTML/ItineraryListPage.html
+++ b/HTML/ItineraryListPage.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <h1>My Itineraries</h1>
+            <img class="logo" rel="shortcut icon" src="../Images-Fonts/Wanderlist.png" />
         </div>
         <div class="menu">
             <ul>
