--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -16,7 +16,7 @@
 <body>
   <div class="navbar">
     <div class="logo">
-        <h1>Wanderlist</h1>
+        <img class="logo" rel="shortcut icon" src="../Images-Fonts/Wanderlist.png" />
 
     </div>
     <div class="menu">
