made logo bigger

--- a/HTML/front_page.html
+++ b/HTML/front_page.html
@@ -31,7 +31,7 @@
 </div>
 
 </div>  
-<div class="footer">
+<footer class="footer">
     <div>
         <p>Planning on the go? Download our app, Available now on IOS and Android!</p>
         
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-</div>
+</footer>
 </body>
 </html>
